# claude-orchestrator

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  getting-started.md  project-brief.md  stitch-handoff.md  tmux.conf.example
docs/stitch/: healthy.html  operator.html
src/claude_orchestrator/: __init__.py  __main__.py  account.py  account_usage.py  cli.py  config.py  constants.py  speech.py  speech_player.py  speech_settings.py  summarizer.py  summary_store.py  usage.py
src/claude_orchestrator/hooks/: __init__.py  event_handler.sh  installer.py
src/claude_orchestrator/state/: __init__.py  manager.py  models.py  reconciler.py
src/claude_orchestrator/tmux/: __init__.py  discover.py  navigator.py
src/claude_orchestrator/tui/: __init__.py  activity.py  app.py  theme.tcss  tokens.py
src/claude_orchestrator/tui/widgets/: __init__.py  header_bar.py  session_row.py  speech_bar.py
tests/: conftest.py  test_account.py  test_account_usage.py  test_cli_commands.py  test_config.py  test_end_to_end.py  test_hook_handler.py  test_hook_installer.py  test_reconciler.py  test_smoke.py  test_speech.py  test_speech_bar.py  test_speech_player.py  test_speech_settings.py  test_state_manager.py  test_state_models.py  test_summarizer.py  test_summary_store.py  test_tmux_discover.py  test_tmux_navigator.py  test_tui.py  test_tui_activity.py  test_tui_tokens.py  test_tui_widgets.py  test_usage.py
